--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
-server.port=8081
+server.port=80
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://111.231.253.70:3306/goodssystem?characterEncoding=UTF-8&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
+
+mybatis.type-aliases-package=com.example.goods.
+mybatis.mapper-locations=classpath:mappers/*.xml
+
+spring.datasource.platform: mysql
+spring.datasource.initialSize: 5
+spring.datasource.minIdle: 5
+spring.datasource.maxActive: 20
+spring.datasource.maxWait: 60000
+spring.datasource.timeBetweenEvictionRunsMillis: 60000
+spring.datasource.minEvictableIdleTimeMillis: 300000
+spring.datasource.validationQuery: SELECT1FROMDUAL
+spring.datasource.testWhileIdle: true
+spring.datasource.testOnBorrow: false
+spring.datasource.testOnReturn: false
+spring.datasource.filters: stat,wall,log4j
+spring.datasource.logSlowSql: true
+
+
