--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.port=80
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://111.231.253.70:3306/goodssystem?characterEncoding=UTF-8&allowMultiQueries=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://111.231.253.70:3306/goodssystem?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=ttf991130
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 
-mybatis.type-aliases-package=com.example.goods.
+#mybatis.type-aliases-package=com.example.goods.entity
 mybatis.mapper-locations=classpath:mappers/*.xml
 
 spring.datasource.platform: mysql
